[package]
name = "secure-gate-fuzz"
version = "0.1.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
secure-gate = { path = "../", features = [
  "zeroize",
  "serde",
  "rand",
  "conversions",
] }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Needed for the serde fuzz target
serde_json = "1.0"
bincode = "2.0"

# Required because the fuzz targets directly `use zeroize::Zeroize`
# (secure-gate only re-exports it when the feature is on)
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# Optional – harmless, already pulled in by secure-gate
secrecy = "0.10"

[features]
# Maximum coverage – all library features on by default
default = ["zeroize", "serde", "rand", "conversions"]

# Propagate library features
zeroize = ["secure-gate/zeroize"]
serde = ["secure-gate/serde"]
rand = ["secure-gate/rand"]
conversions = ["secure-gate/conversions"]

[[bin]]
name = "clone"
path = "fuzz_targets/clone.rs"
test = false
bench = false
doc = false

[[bin]]
name = "expose"
path = "fuzz_targets/expose.rs"
test = false
bench = false
doc = false

[[bin]]
name = "mut"
path = "fuzz_targets/mut.rs"
test = false
bench = false
doc = false

[[bin]]
name = "parsing"
path = "fuzz_targets/parsing.rs"
test = false
bench = false
doc = false

[[bin]]
name = "serde"
path = "fuzz_targets/serde.rs"
test = false
bench = false
doc = false
