[package]
name = "secure-gate-fuzz"
version = "0.1.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
secure-gate = { path = "../", features = ["zeroize", "rand", "conversions"] }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Required for zeroize::Zeroize usage in fuzz targets
zeroize = { version = "1.8", default-features = false, features = ["alloc"] }

# Optional – harmless, already pulled in by secure-gate
secrecy = "0.10"

[features]
default = ["zeroize", "rand", "conversions"]

zeroize = ["secure-gate/zeroize"]
rand = ["secure-gate/rand"]
conversions = ["secure-gate/conversions"]

[[bin]]
name = "clone"
path = "fuzz_targets/clone.rs"
test = false
bench = false
doc = false

[[bin]]
name = "expose"
path = "fuzz_targets/expose.rs"
test = false
bench = false
doc = false

[[bin]]
name = "mut"
path = "fuzz_targets/mut.rs"
test = false
bench = false
doc = false

[[bin]]
name = "parsing"
path = "fuzz_targets/parsing.rs"
test = false
bench = false
doc = false
